# domoticz

./: .clang-format  .cproject  .gitattributes  .gitignore  .gitmodules  .project  .travis.yml  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Changes.txt  DirCmp.txt  History.txt  INSTALL.md  INSTALL.txt  Makefile  PAT.txt  Performance1.psess  README.md  S7-config.json  S7-config.yaml  SECURITY.md  SECURITY_SETUP.md  Selector.txt  Test DEV.txt  _.cproject_  _.project_  appversion.default  appversion.h  appversion.h.txt  appveyor.yml  cmake_install.cmake  copyfiles.sh  domoticz-hvbommel.sln  domoticz-hvbommel.vcxproj  domoticz-hvbommel.vcxproj.filters  domoticz.db.148-home-20210824  domoticz.db.b1  domoticz.sh  (+24 more)
MQTT/: CMakeLists.txt  Heap.h  LinkedList.c  Log.h  MQTTClientPersistence.h  MQTTPacket.h  MQTTPersistence.c  MQTTPersistence.h  MQTTProtocol.h  MQTTProtocolOut.h  MQTTVersion.c  Makefile  Messages.c  Socket.c  StackTrace.c  Tree.c  actions.c  alias_mosq.c  alias_mosq.h  callbacks.c  cmake_install.cmake  config.h  connect.c  dummypthread.h  handle_auth.c  handle_connack.c  handle_disconnect.c  handle_ping.c  handle_pubackcomp.c  handle_publish.c  handle_pubrec.c  handle_pubrel.c  handle_suback.c  handle_unsuback.c  helpers.c  linker.version  logging_mosq.c  logging_mosq.h  loop.c  memory_mosq.c  (+50 more)
MQTT/samples/: MQTTAsync_publish.c  stdoutsub.c  stdoutsuba.c  subasync.c
domoticz/: ASyncSerial.cpp  ASyncSerial.h  CMakeLists.txt  CmdLine.cpp  DomoticzDevice.cpp  DomoticzDevice.h  DomoticzHardware.cpp  DomoticzHardware.h  DomoticzTCP.cpp  DomoticzTCP.h  Helper.cpp  Helper.h  History.txt  INSTALL.txt  P1MeterBase.cpp  P1MeterBase.h  P1MeterSerial.cpp  P1MeterSerial.h  P1MeterTCP.cpp  P1MeterTCP.h  RFXComSerial.cpp  RFXComSerial.h  RFXComTCP.cpp  RFXComTCP.h  RFXNames.cpp  RFXNames.h  RFXtrx.h  ReadMe.txt  SQLHelper.cpp  SQLHelper.h  Scheduler.cpp  Scheduler.h  SunRiseSet.cpp  SunRiseSet.h  UrlEncode.cpp  UrlEncode.h  WebServer.cpp  WebServer.h  WindowsHelper.cpp  WindowsHelper.h  (+22 more)
domoticz/.tx/: config
domoticz/Config/: device_classes.xml  device_configuration.xsd  manufacturer_specific.xml  options.xml
domoticz/hardware/: 1Wire.cpp  1Wire.h  ASyncSerial.cpp  ASyncSerial.h  ASyncTCP.cpp  ASyncTCP.h  BMP085.cpp  BMP085.h  DavisLoggerSerial.cpp  DavisLoggerSerial.h  DomoticzHardware.cpp  DomoticzHardware.h  DomoticzTCP.cpp  Dummy.cpp  EnOcean.cpp  EnOcean.h  EnOceanESP2.cpp  EnOceanESP3.cpp  EnOceanESP3.h  ForecastIO.cpp  ForecastIO.h  Gpio.cpp  Gpio.h  GpioPin.cpp  GpioPin.h  HardwareMonitor.cpp  HardwareMonitor.h  HarmonyHub.cpp  HarmonyHub.h  ICYThermostat.cpp  ICYThermostat.h  Limitless.cpp  Limitless.h  Meteostick.cpp  Meteostick.h  OTGWBase.cpp  OTGWBase.h  OTGWSerial.cpp  OTGWSerial.h  OTGWTCP.cpp  (+59 more)
domoticz/httpclient/: HTTPClient.cpp  HTTPClient.h  UrlEncode.cpp
domoticz/json/: json_reader.cpp  json_value.cpp  json_writer.cpp
domoticz/jwsmtp/: base64_b.cpp  base64_b.h  compat.cpp  demo1.cpp  mailer.cpp  mailer.h
domoticz/libusb/: hidsdi.h
domoticz/lua/: CMakeLists.txt  Makefile
domoticz/main/: Camera.cpp  Camera.h  CmdLine.cpp  CmdLine.h  DataPush.cpp  DataPush.h  EventSystem.cpp  EventSystem.h  GZipHelper.h  Helper.cpp  Helper.h  Logger.cpp  Logger.h  RFXNames.cpp  RFXNames.h  RFXtrx.h  SQLHelper.cpp  SQLHelper.h  Scheduler.cpp  Scheduler.h  Version.h  WebServer.cpp  WebServer.h  WindCalculation.h  WindowsHelper.cpp  WindowsHelper.h  appversion.cpp  appversion.h  domoticz.cpp  domoticz.rc  localtime_r.cpp  localtime_r.h  mainstructs.h  mainworker.cpp  mainworker.h  stdafx.cpp  stdafx.h
domoticz/scripts/: _domoticz_main  _domoticz_main.bat  readme.txt  restart_domoticz  update_domoticz
domoticz/smtpclient/: SMTPClient.cpp  SMTPClient.h
domoticz/sqlite/: sqlite3.lib
domoticz/tcpserver/: TCPClient.cpp  TCPClient.h  TCPServer.cpp  TCPServer.h
domoticz/webserver/: Base64.cpp  Base64.h  cWebem.cpp  cWebem.h  connection.cpp  connection.hpp  connection_manager.cpp  mime_types.cpp  mime_types.hpp  reply.hpp  request_handler.cpp  request_handler.hpp  request_parser.cpp
domoticz/www/: cam.html  dashboard.html  devices.html  domoticz.manifest  dpfibaro.html  events.html  eventsframe.html  floorplan.html  floorplanedit.html  floorplans.html  front.html  frontpage_example.html  hardware.html  history.html  html5.appcache  index.html  lights.html  log.html  login.html  notification.html  offline.html  onecolumn.html  report.html  roomplan.html  scenes.html  setup.html  switch_icons.txt  temperature.html  threecolumn.html  twocolumn1.html  twocolumn2.html  update.html  users.html  uservariables.html  utility.html  weather.html  zwavetopology.html
hardware/blebox/: CMakeLists.txt  box.cpp  box.h  errors.cpp  errors.h  ip.h  precompiled.hxx  products.cpp  products.h  rfx.cpp  rfx.h  session.cpp  session.h  version.cpp  version.h  web.cpp  widgets.cpp  widgets.h
lua/src/: CMakeLists.txt  Makefile  cmake_install.cmake
sqlite/: CMakeLists.txt  Makefile  cmake_install.cmake
tests/: CMakeLists.txt  README.md  memdb.cpp  memdb.h  stubs.cpp  stubs.h  test_helper.cpp  test_helper.h  testdb.cpp  testdb.h  worker_helper.cpp  worker_helper.h
tests/cmake/: boost.cmake  cereal.cmake  lua.cmake  minizip.cmake  sqlite.cmake  ssl.cmake
tinyxpath/: AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  Makefile.configure  README  action_store.cpp  action_store.h  build  byte_stream.h  configure.in  htmlutil.cpp  htmlutil.h  lex_token.h  lex_util.cpp  lex_util.h  main.cpp  node_set.cpp  node_set.h  openoff.xml  rss2_projnews.xml  test.xml  tinystr.cpp  tinyxml.cpp  tinyxml.h  tinyxmlerror.cpp  tinyxmlparser.cpp  tinyxpath.dsp  tinyxpath.sln  tinyxpath.vcproj  tinyxpath_conf.h  tokenlist.cpp  tokenlist.h  xml_util.cpp  xml_util.h  xpath_expression.cpp  xpath_expression.h  xpath_processor.cpp  xpath_processor.h  xpath_stack.cpp  (+7 more)
trunk/MQTT/: CMakeLists.txt  Heap.c  MQTTAsync.c  MQTTAsync.h  MQTTClient.c  MQTTClient.h  (+23 more)
zip/: CMakeLists.txt  Makefile  cmake_install.cmake  ioapi.c  ioapi.h  iowin32.c  unzip.c  unzip.cpp  unzip.h  zip.c  zip.cpp  zip.h
(+5606 files in other folders)
